add_library(game STATIC game.c piece.c)
install(TARGETS game DESTINATION ${PROJECT_SOURCE_DIR}/lib)

add_executable(test_piece test_piece1.c)
target_link_libraries(test_piece game)
# add_executable(test_game test_game.c)
# target_link_libraries(test_game game)
enable_testing()
add_test(test-piece test_piece)
set_tests_properties(test-piece PROPERTIES TIMEOUT 3)
# add_test(test-game test_game)
# set_tests_properties(test-game PROPERTIES TIMEOUT 3)
